--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
 
     defaultConfig {
         applicationId "be.ac.ulb.lisa.idot.android.dicomviewer"
-        minSdkVersion 7
-        targetSdkVersion 7
+        minSdkVersion 8
+        targetSdkVersion 8
     }
 
     buildTypes {
@@ -16,4 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    sourceSets {
+        androidTest {
+            java.srcDirs = ['app/src/test']
+        }
+    }
+}
+
+dependencies {
+    // Required -- JUnit 4 framework
+    testCompile 'junit:junit:4.12'
+    // Optional -- Mockito framework
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
