--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ android {
 
 dependencies {
     // Required -- JUnit 4 framework
-    testCompile 'junit:junit:4.12'
     // Optional -- Mockito framework
+    compile 'com.android.support:support-v4:21.0.3'
+    testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
