--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,10 @@ allprojects {
         jcenter()
     }
 }
+
+ext {
+    supportLibVersion = "24.0.0"
+    runnerVersion = "0.5"
+    rulesVersion = "0.5"
+    espressoVersion = "2.2.2"
+}
