--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,12 @@ dependencies {
     // Testing-only dependencies
     // Force usage of support annotations in the test app, since it is internally used by the runner module.
     androidTestCompile 'com.android.support:support-annotations:' + rootProject.supportLibVersion;
+    // Android JUnit Runner
     androidTestCompile 'com.android.support.test:runner:' + rootProject.runnerVersion;
+    // JUnit4 Rules
     androidTestCompile 'com.android.support.test:rules:' + rootProject.rulesVersion;
+    // Espresso core
     androidTestCompile 'com.android.support.test.espresso:espresso-core:' + rootProject.espressoVersion;
+    // Espresso-contrib for DatePicker, RecyclerView, Drawer actions, Accessibility checks, CountingIdlingResource
+    //androidTestCompile 'com.android.support.test.espresso:espresso-contrib:' + rootProject.espressoVersion;
 }
